--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="news__horizontally">
                             <div class="lifestyle">
                                 <div class="image">
-                                    <img src="images/layer 47.png" alt="">
+                                    <img src="images/Layer 47.png" alt="">
                                     <p>LIFESTYLE</p>
                                 </div>
                                 <div class="lifestyle__inner">
@@ -210,7 +210,7 @@
                     <div class="news__horizontally">
                         <div class="lifestyle">
                             <div class="image">
-                                <img src="images/layer 48.png" alt="">
+                                <img src="images/Layer 48.png" alt="">
                                 <p>LIFESTYLE</p>
                             </div>
                             <div class="lifestyle__inner">
