--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <div class="news__vertically">
                             <div class="lifestyle_vertically">
                                 <div class="image">
-                                    <img src="images/Layer1.png" alt="">
+                                    <img src="images/layer1.png" alt="">
                                     <p>PHOTOGRAPHY</p>
                                 </div>
                                 <div class="lifestyle__inner">
@@ -278,7 +278,7 @@
                         <div class="news__vertically">
                             <div class="lifestyle_vertically">
                                 <div class="image">
-                                    <img src="images/Layer2.png" alt="">
+                                    <img src="images/layer2.png" alt="">
                                     <p>INSPIRATION</p>
                                 </div>
                                 <div class="lifestyle__inner">
@@ -310,7 +310,7 @@
                     <div class="main__content-item">
                         <div class="lifestyle_vertically">
                             <div class="image">
-                                <img src="images/Layer2.png" alt="">
+                                <img src="images/layer2.png" alt="">
                                 <p>INSPIRATION</p>
                             </div>
                             <div class="lifestyle__inner">
@@ -342,7 +342,7 @@
                         <div class="news__vertically">
                             <div class="lifestyle_vertically">
                                 <div class="image">
-                                    <img src="images/Layer1.png" alt="">
+                                    <img src="images/layer1.png" alt="">
                                     <p>PHOTOGRAPHY</p>
                                 </div>
                                 <div class="lifestyle__inner">
