--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Asul&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/media.css">    <title>UniversalBlog</title>
+    <link rel="stylesheet" href="css/media.css">
+    <title>UniversalBlog</title>
 </head>
 
 <body>
@@ -486,7 +487,7 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script src="./js/jquery.nav.js"></script>
+    <script src="jquery.nav.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
