fixed media bags

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="main__content">
                 <div class="main__content-inner">
-                    <div class="news__horizontally">
+                    <div class="news__type-a">
                         <div class="main__content-item">
                             <div class="lifestyle">
                                 <div class="image">
@@ -242,7 +242,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="news__vertically">
+                    <div class="news__type-b">
                         <div class="main__content-item">
                             <div class="lifestyle_vertically">
                                 <div class="image">
@@ -344,7 +344,6 @@
                             </div>
                         </div>
                         <div class="main__content-item">
-
                             <div class="lifestyle_vertically">
                                 <div class="image">
                                     <img src="images/layer1.png" alt="">
@@ -376,10 +375,9 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
-                    <div class="main__content__type-3">
+                    <div class="news__type-c">
                         <div class="main__content-item">
                             <div class="lifestyle__type-3">
                                 <div class="image">
